--- a/.gitattributes
+++ b/.gitattributes
@@ -2,4 +2,5 @@
 *.js linguist-detectable=false
 *.ftl linguist-detectable=false
 *.scss linguist-detectable=false
+*.html linguist-detectable=false
 *.java linguist-detectable=true
